--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
           style="width: 160px; height: 200px"
         />
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-2" style="position: relative;">
         <div class="row"  style="font-weight: bold;">
           <div class="col-sm"> {{ item.name }}</div>
           <div class="col-sm"></div>
@@ -69,7 +69,7 @@
           </select>
         </div>
 
-        <div class="row" style="display: inline-block; text-align: left">
+        <div class="row" style="display: inline-block; position: absolute;bottom: 0; ">
           <a href="#" *ngIf="item.mode == 2" (click)="onUpdate(item.id)">Update</a>
           <a href="#" *ngIf="item.mode == 1" (click)="onEdit(item.id)">Edit</a>
           <a href="#" (click)="onRemove(item.id)">Remove</a>
