--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="col-sm-2">
         <img
-          src="./assets/woman{{ i + 1 }}.png"
+          src="./assets/woman{{ item.itemId}}.png"
           style="width: 160px; height: 200px"
         />
       </div>
